--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
+		<dependency>
 			<groupId>nu.pattern</groupId>
 			<artifactId>opencv</artifactId>
 			<version>2.4.9-7</version>
